--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 	<meta charset='UTF-8'/>
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<div>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
