--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ body {
      
     
     <div class="topnav" id="myTopnav">
-  <a href="aqui la genda inicio" class="active">AGENDA DEPORTIVA</a>
-  <a href="aqui los canales por defecto" target="_blank">MAS CANALES</a>
+  <a href="socialdexz.github.io/esp" class="active">AGENDA DEPORTIVA</a>
+  <a href="socialdexz.github.io/esp" target="_blank">MAS CANALES</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
