--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ body {
         <li>
             <div class="link">08:00 🇪🇸 Real Madrid vs Barcelona</i></div>
             <ul class="submenu">
-                <li><a href="https://ok.ru/videoembed/734338617729">Espn 1</a></li>
+                <li><a href="https://socialdexz.github.io/esp">Espn 1</a></li>
                 <li><a href="https://ok.ru/videoembed/739682421377">Espn US</a></li>
                 
             </ul>
