--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ body {
      
     
     <div class="topnav" id="myTopnav">
-  <a href="https://socialdexz.github.io" class="active">AGENDA DEPORTIVA</a>
-  <a href="  " target="_blank"></a>
+  <a href="https://futbolonlinetv.com" class="active">AGENDA DEPORTIVA</a>
+  <a href=" https://futbolonlinetv.com/canales " target="_blank">MAS CANALES</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
