--- a/index.html
+++ b/index.html
@@ -200,10 +200,8 @@ body {
         <li> 
         <div class="link"></i>15:15 🇵🇪 Binacional Vs Cesar Vallejo</i></div>
             <ul class="submenu"> 
-                <li><a href="https://futbolonlinetv.com/ligamax2x">LIGA1MAX (ads)</a></li>
-                <li><a href="https://futbolonlinetv.com/ligamax1x">LIGA1MAX</a></li>
+                <li><a href="https://animeflv-online-gratis.blogspot.com/p/ligamax4.html?m=1">LIGA1 </a></li>
                 
-
             </ul>   
             
            <li>
