--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ body {
         <li> 
         <div class="link"></i>13:45 🏴󠁧󠁢󠁥󠁮󠁧󠁿 Nottingham Forest Vs Sheffield Udt</i></div>
             <ul class="submenu"> 
-                <li><a href="https://futbolonlinetv.com/star1">STAR PLUS</a></li>
+                <li><a href="https://futbolonlinetv.com/star1x">STAR PLUS</a></li>
                  
 
             </ul>  
