--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ body {
         <div class="link"></i>🇵🇪 13:00  Alianza Atl Vs Union Comercio  </i></div>
             <ul class="submenu"> 
                 <li><a href="https://futbolonlinetv.com/ligamax1x">LIGA1MAX</a></li>
-                 <li><a href="https://futbolonlinetv.com/LIGAMAX2X">LIGA1MAX 2</a></li>
+                 <li><a href="https://futbolonlinetv.com/ligamax2x">LIGA1MAX 2</a></li>
                  
 
             </ul>  
