--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ body {
         <li> 
         <div class="link"></i> 🇸🇦⚽️13:00  Al-Hilal Vs Al Feiha</i></div>
             <ul class="submenu"> 
-                <li><a href="https://futbolonlinetv.com/">SSC1 SPORTS</a></li>
+                <li><a href="https://futbolonlinetv.com/ssc1x">SSC1 SPORTS</a></li>
                  
 
             </ul>  
