--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ body {
         <li> 
         <div class="link"></i>  🇪🇦⚽️14:30  Osasuna Vs Atlethic Club   </i></div>
             <ul class="submenu"> 
-                <li><a href="https://futbolonlinetv.com/espn3x">ESPN 3</a></li>
+                <li><a href="https://futbolonlinetv.com/espndeportes1x">ESPN 3</a></li>
                  
 
             </ul>  
