--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ body {
 
     <ul id="accordion" class="accordion">
         <li>
-            <div class="link"🇸🇦⚽️12:20  Al Nassr Riyadh Vs Al-Ahli Dubai</i></div>
+            <div class="link</i>"🇸🇦⚽️12:20  Al Nassr Riyadh Vs Al-Ahli Dubai</i></div>
             <ul class="submenu">
                 <li><a href="https://futbolonlinetv.com/ssc1x">SSC1 SPORTS</a></li>
                 <li><a href="https://futbolonlinetv.com/ssc1x">SSC2 SPORTS</a></li>
