--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@ body {
         <li> 
         <div class="link"></i> 🌎🏆17:00  Bolivar Vs Internacional </i></div>
             <ul class="submenu"> 
-                <li><a href="https://futbolonlinetv.com/espn1x">ESPN </a></li>
-                 <li><a href="https://futbolonlinetv.com/espn1x">ESPN PERU</a></li>
+                <li><a href="https://futbolonlinetv.com/foxsport1x">FOX SPORTS AR </a></li>
+                 <li><a href="https://futbolonlinetv.com/foxsport1x">ESPN PERU</a></li>
                  
 
             </ul>  
