--- a/index.html
+++ b/index.html
@@ -425,4 +425,12 @@ var accordion = new Accordion($('#accordion'), false);
 
 <meta name="galaksion-domain-verification" content="d2d667fe9d4bf05b1b8eba4611146e4dfcecabc930ebc6408e2ab55daf44fde8" />
 
+
+
+
 		
+<script type="text/javascript">
+    aclib.runAutoTag({
+        zoneId: 'fo0t4enjqo',
+    });
+</script>
