--- a/index.html
+++ b/index.html
@@ -429,8 +429,18 @@ var accordion = new Accordion($('#accordion'), false);
 
 
 		
+
+
+<script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
+
+		
 <script type="text/javascript">
     aclib.runAutoTag({
         zoneId: 'fo0t4enjqo',
     });
 </script>
+
+
+
+
+		
