--- a/index.html
+++ b/index.html
@@ -420,25 +420,11 @@ var accordion = new Accordion($('#accordion'), false);
 
 
 
-
-
-
-<meta name="galaksion-domain-verification" content="d2d667fe9d4bf05b1b8eba4611146e4dfcecabc930ebc6408e2ab55daf44fde8" />
-
-
-
-
 		
 
 
 <script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
 
-		
-<script type="text/javascript">
-    aclib.runAutoTag({
-        zoneId: 'fo0t4enjqo',
-    });
-</script>
 
 
 <div>
@@ -450,4 +436,23 @@ var accordion = new Accordion($('#accordion'), false);
 </div>
 
 
+<script type="text/javascript">
+    aclib.runInterstitial({
+        zoneId: '8238166',
+    });
+</script>
+
+<script type="text/javascript">
+    aclib.runInPagePush({
+        zoneId: '8238186',
+        refreshRate: 30,
+        maxAds: 2,
+    });
+</script>
+
+
+
+
+
+		
 		
