--- a/index.html
+++ b/index.html
@@ -428,36 +428,11 @@ var accordion = new Accordion($('#accordion'), false);
 
 
 
-
+<script async="async" data-cfasync="false" src="//thubanoa.com/1?z=7296408"></script>
 		
 
 
-<script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
 
-
-
-<div>
-    <script type="text/javascript">
-        aclib.runBanner({
-            zoneId: '8056190',
-        });
-    </script>
-</div>
-
-
-<script type="text/javascript">
-    aclib.runInterstitial({
-        zoneId: '8238166',
-    });
-</script>
-
-<script type="text/javascript">
-    aclib.runInPagePush({
-        zoneId: '8238186',
-        refreshRate: 30,
-        maxAds: 2,
-    });
-</script>
 
 
 
