--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
  
 
 <iframe height="500"
-           sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation "src="https://golazoz.com/mlw?ext=yes" style="width: 100%; border: none; height: 526px;" frameborder="0" scrolling="yes" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" data-no-lazy="1"></iframe>
+           sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation "src="https://golazoz.com/chat#google_vignette" style="width: 100%; border: none; height: 526px;" frameborder="0" scrolling="yes" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" data-no-lazy="1"></iframe>
 
 
 
